--- a/portfolio-ios/portfolio-ios/Info.plist
+++ b/portfolio-ios/portfolio-ios/Info.plist
@@ -5,6 +5,8 @@
 	<key>NSCameraUsageDescription</key>
 	<string>カメラにアクセスします</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>フォトライブラリに保存します</string>
+	<key>NSPhotoLibraryUsageDescription</key>
 	<string>フォトライブラリにアクセスします</string>
 	<key>UIMainStoryboardFile</key>
 	<string>MainTabBar</string>
